--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ attrs==20.3.0
 Babel==2.9.1
 backcall==0.2.0
 blessings==1.7
-botocore==1.12.253
+boto3==1.18.12
+botocore==1.21.12
 certifi==2021.5.30
 charset-normalizer==2.0.3
 decorator==5.0.9
@@ -15,6 +16,7 @@ django-extensions==2.2.1
 django-filter==2.1.0
 django-nose==1.4.6
 django-phonenumber-field==5.2.0
+django-storages=1.11.1
 djangorestframework==3.9.1
 docutils==0.15.2
 entrypoints==0.3
