--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ django-extensions==2.2.1
 django-filter==2.1.0
 django-nose==1.4.6
 django-phonenumber-field==5.2.0
-django-storages=1.11.1
+django-storages==1.11.1
 djangorestframework==3.9.1
 docutils==0.15.2
 entrypoints==0.3
