--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,12 @@ blessings==1.7
 boto3==1.18.12
 botocore==1.21.12
 certifi==2021.5.30
+cloudinary==1.26.0
 charset-normalizer==2.0.3
 decorator==5.0.9
 dj-database-url==0.5.0
 Django==2.2.10
+django-cloudinary-storage==0.3.0
 django-configurations==2.1
 django-extensions==2.2.1
 django-filter==2.1.0
