--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ paystackapi==2.0.0
 pbr==5.6.0
 phonenumbers==8.12.24
 pickleshare==0.7.5
+Pillow==8.3.1
 prompt-toolkit==2.0.10
 psycopg2==2.8.6
 pycodestyle==2.5.0
