--- a/requirements.txt
+++ b/requirements.txt
@@ -1,63 +1,18 @@
-asgiref==3.4.1
-atomicwrites==1.4.0
-attrs==20.3.0
-Babel==2.9.1
-backcall==0.2.0
-blessings==1.7
-boto3==1.18.12
-botocore==1.21.12
-certifi==2021.5.30
 cloudinary==1.26.0
-charset-normalizer==2.0.3
-decorator==5.0.9
 dj-database-url==0.5.0
 Django==2.2.9
-django-cloudinary-storage==0.3.0
 django-configurations==2.1
 django-extensions==2.2.1
 django-filter==2.1.0
 django-nose==1.4.6
 django-phonenumber-field==5.2.0
+django-pwa==1.0.10
 django-storages==1.11.1
 djangorestframework==3.9.1
-docutils==0.15.2
-entrypoints==0.3
-Faker==8.5.1
 gunicorn==19.9.0
-idna==3.2
-iniconfig==1.1.1
-ipython==7.2.0
-ipython-genutils==0.2.0
-jedi==0.18.0
-jmespath==0.10.0
-livereload==2.6.3
-mccabe==0.6.1
-newrelic==4.12.0.113
-nose==1.3.7
-packaging==20.9
-parso==0.8.2
 paystackapi==2.0.0
-pbr==5.6.0
 phonenumbers==8.12.24
-pickleshare==0.7.5
 Pillow==8.3.1
-prompt-toolkit==2.0.10
 psycopg2==2.8.6
-pycodestyle==2.5.0
-pyflakes==2.1.1
-Pygments==2.9.0
-python-dateutil==2.8.1
 python-dotenv==0.19.0
-pytz==2021.1
-PyYAML==5.4.1
-requests==2.26.0
-s3transfer==0.2.1
-sqlparse==0.4.1
-text-unidecode==1.3
-toml==0.10.2
-tornado==6.1
-traitlets==5.0.5
-urllib3==1.25.11
-wcwidth==0.2.5
 whitenoise==5.2.0
-wincertstore==0.2
